--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node ./src/server.js",
     "pretest": "eslint ./src --fix",
-    "test": "echo \"Tests complete\""
+    "test": "echo \"Tests complete\"",
+    "nodemon": "nodemon -e js,html,css,json --watch ./src -- watch ./hosted ./src/server.js",
+    "build": "webpack"
   },
   "author": "Austin Willoughby",
   "license": "ISC",
